package edu.fiuba.algo3.modelo.Construccion;

public interface ReglaConstruccion {
    void validar(Object...ubicaciones);
}
