@startuml

class Construccion{
    - propietario : Jugador
    - costo : Costo
    - vertice: Vertice
    + pagarCon(inventario:Inventario)
    + agregarPropietario(listaVictimas : List<Jugador>)
    + esPropietarioElJugador(jugador:Jugador):boolean
    + agregarPropietario(listaVictimas:List<Jugador>]
    + esAdyacenteA(Arista nueva): boolean
    + {abstract} producirSegun(dado:int):List<Recurso>

}


class Ciudad  {
    +producirSegun(dado:int):List<Recurso>
}


class Poblado{
      +producirSegun(dado:int):List<Recurso>
}


class Carretera {
    -arista:Arista
    +producirSegun(dado:int):List<Recurso>
    +esAdyacenteA(otra:Arista):boolean

}

class ConstruirAsentamiento{
     +construir(jugador:Jugador,
     construccion:Construccion, ubicaciones:Object[*])

}


class ConstruirCarretera{
    +construir(jugador:Jugador,
    construccion:Construccion, ubicaciones:Object[*])
}


class Construible{
  +construir(jugador:Jugador,
  construccion:Construccion, ubicaciones:Object[*])
}


interface ReglaConstruccion{
   +validar(ubicaciones:Object[*])
}

class ReglaAdyacencia{
   +validar(ubicaciones:Object[*])
}


class ReglaDistancia{
    +validar(ubicaciones:Object[*])
}




Ciudad --|> Construccion
Construccion <|-- Poblado
Construccion <|-- Carretera

ConstruirAsentamiento ..|> Construible
Construible <|.. ConstruirCarretera



Construible ..> Construccion : <<use>>


ReglaConstruccion ..|> ReglaAdyacencia
ReglaConstruccion ..|> ReglaDistancia

Construible --> ReglaConstruccion : tiene



@enduml